--- a/client/package.json
+++ b/client/package.json
@@ -16,5 +16,8 @@
     "react-dom": "^18.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
